--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -76,6 +76,7 @@
             <div style="flex: 3;">
               <label for='studentId'>학생:</label>
               <select id='studentId' name='student_id' class='form-control'></select> 
+              
               학년: <span id='gradeLevel'></span><br/>
             </div>
             <div style="flex: 7;">
@@ -99,12 +100,13 @@
         <div class= "button-container text-right mt-3">
            <!-- Submit button for the form -->
            <button type=submit class ="btn btn-primary">Add Lesson</button> 
+           
         </div>
    </form>
 
 <!-- jQuery and Bootstrap.js -->
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
