--- a/templates/student.html
+++ b/templates/student.html
@@ -48,19 +48,19 @@
             </li>
        
             <li class="{% if 'student_list' in currentPage %}active{% endif %}">
-                <a class = "navbar-brand" href="student_list.html">학생 정보  </a>
+                <a class = "navbar-brand" href="/student_list.html">학생 정보  </a>
             </li>
             
             <li class="{% if 'subject_list' in currentPage %}active{% endif %}">
-                <a class = "navbar-brand" href="subject_list.html">과정 정보  </a>
+                <a class = "navbar-brand" href="/subject_list.html">과정 정보  </a>
             </li>
             
             <li class="{% if 'subject_list_detail' in currentPage %}active{% endif %}">
-                <a class = "navbar-brand" href="subject_list_detail.html">과정 상세  </a>
+                <a class = "navbar-brand" href="/subject_list_detail.html">과정 상세  </a>
             </li>
             
             <li class="{% if 'lesson_list' in currentPage %}active{% endif %}">
-                <a class = "navbar-brand" href="lesson_list.html">수업 리스트</a>
+                <a class = "navbar-brand" href="/lesson_list.html">수업 리스트</a>
             </li>
 
           </ul> 
