--- a/templates/lesson_list.html
+++ b/templates/lesson_list.html
@@ -8,7 +8,9 @@
 
   <!-- DataTables CSS -->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
- <!-- 커스텀 CSS -->
+ <!-- Fixed Header CSS -->
+ 
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.9/css/fixedHeader.bootstrap4.css">
  <style>
   .sidebar {
     position: fixed;
