--- a/templates/lesson_update.html
+++ b/templates/lesson_update.html
@@ -46,19 +46,19 @@
                 </li>
            
                 <li class="{% if 'student_list' in currentPage %}active{% endif %}">
-                    <a class = "navbar-brand" href="student_list.html">학생 정보  </a>
+                    <a class = "navbar-brand" href="/student_list.html">학생 정보  </a>
                 </li>
                 
                 <li class="{% if 'subject_list' in currentPage %}active{% endif %}">
-                    <a class = "navbar-brand" href="subject_list.html">과정 정보  </a>
+                    <a class = "navbar-brand" href="/subject_list.html">과정 정보  </a>
                 </li>
                 
                 <li class="{% if 'subject_list_detail' in currentPage %}active{% endif %}">
-                    <a class = "navbar-brand" href="subject_list_detail.html">과정 상세  </a>
+                    <a class = "navbar-brand" href="/subject_list_detail.html">과정 상세  </a>
                 </li>
                 
                 <li class="{% if 'lesson_list' in currentPage %}active{% endif %}">
-                    <a class = "navbar-brand" href="lesson_list.html">수업 리스트</a>
+                    <a class = "navbar-brand" href="/lesson_list.html">수업 리스트</a>
                 </li>
     
               </ul> 
@@ -70,12 +70,12 @@
     <h1 class="mb-4">수업 기록 수정</h1>
 
     <!-- Lesson Form -->
-    <form id="lessonForm" method="POST">
+    <form>
         <div class="form-group">
           <div style="display: flex;">
             <div style="flex: 3;">
               <label for='studentId'>학생:</label>
-              <input type='text' id='studentName' name='student_name' class='form-control' value="{{ student_name }}" readonly> 
+              <input type='text' id='student_name' name='student_name' class='form-control' value="{{ student_name }}" readonly> 
               학년: <span id='gradeLevel'></span><br/>
             </div>
             <div style="flex: 7;">
@@ -96,19 +96,13 @@
              기타사항:
              <textarea id ='etc' name= 'etc' rows = "5" class = "form-control"></textarea><br/>
         </div> 
-        <form id="lessonForm" method="POST">
-          <div class="form-group">
-              <!-- Input fields for lesson details, teacher comments and etc -->
-              ...
-      
-              <!-- 삭제 버튼 -->
-              <button type="button" id="deleteButton" class="btn btn-danger">삭제</button>
-          </div>        
-        <div class= "button-container text-right mt-3">
-           <!-- Submit button for the form -->
-           <button type=submit class ="btn btn-primary">수정</button> 
+      </form>
+        <div class = "button-container text-right mt-3"> 
+          <button onclick="deleteLesson()" class='btn btn-danger'>삭제</button>
+          
+          <button onclick ="submitForm('update')"class='btn btn-primary'>수정</button>
         </div>
-   </form>
+   
 
 <!-- jQuery and Bootstrap.js -->
 
@@ -130,7 +124,7 @@
   {% for subject in subject_detail %}
   var option = document.createElement("option");
   option.value = '{{ subject.subject_detail_id }}';
-  option.text = '{{ subject.detail_script }}';
+  option.text = '{{ subject.subject_name }} {{ subject.detail_script }}';
 
   // 현재 선택된 항목인 경우 selected 속성 추가
   if ('{{ subject.subject_detail_id }}' === '{{ lesson_detail.subject_detail_id }}') {
