--- a/templates/lesson_list.html
+++ b/templates/lesson_list.html
@@ -48,7 +48,9 @@
 
 <!-- Bootstrap Datepicker CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-
+<!-- Fixed Header CSS -->
+ 
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.9/css/fixedHeader.bootstrap4.css">
 </head>
 <body>
   <div class="container-fluid">
@@ -141,6 +143,8 @@
 
   <script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 
+<!-- FixedHeader JS -->
+<script src="https://cdn.datatables.net/fixedheader/3.1.9/js/dataTables.fixedHeader.js"></script>
 
 <script type='text/javascript'>
   $(document).ready(function() {
