--- a/templates/subject_list_detail.html
+++ b/templates/subject_list_detail.html
@@ -8,6 +8,9 @@
 
   <!-- DataTables CSS -->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+  <!-- Fixed Header CSS -->
+ 
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.9/css/fixedHeader.bootstrap4.css">
 <!-- 커스텀 CSS -->
 <style>
   .sidebar {
@@ -108,15 +111,17 @@
 <!-- jQuery, Bootstrap.js and DataTables.js -->
 <script src= "https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> 
 <script src= "//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-
+<!-- FixedHeader JS -->
+<script src="https://cdn.datatables.net/fixedheader/3.1.9/js/dataTables.fixedHeader.js"></script>
 
 <script type='text/javascript'>
 // JavaScript 코드
 
 $(document).ready(function() {
-   $('#subjectdetailTable').DataTable();
-} );
-  
+  $('#subjectdetailTable').DataTable({
+    fixedHeader: true // 이렇게 수정해야 함
+  });
+})
 // 위 코드는 페이지 로딩 완료 후에 실행되며, DataTables 라이브러리를 초기화합니다.
 // 이로써 테이블의 각 열을 클릭하면 해당 열 기준으로 정렬되는 등의 추가 기능을 사용할 수 있습니다.
 
