--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -79,7 +79,6 @@
                   <label for='studentId'>학생:</label>
                   <input list='students' id='studentId' name='student_id' class='form-control'>
                   <datalist id='students'></datalist>
-                  
                   학년: <span id='gradeLevel'></span><br/>
               </div>
               <div style="flex: 7;">
@@ -90,23 +89,18 @@
           </div>
         </div>
         <div>    
-
              <!-- Input fields for lesson details, teacher comments and etc -->
              수업 내용: 
-             <textarea name= 'lesson_detail' rows = "5" class = "form-control"></textarea><br/>
-             
+            <textarea name= 'lesson_detail' rows = "5" class = "form-control"></textarea><br/>
              교사 지도:
-             <textarea name= 'teach_comment' rows = "5" class = "form-control"></textarea><br/>
-
+            <textarea name= 'teach_comment' rows = "5" class = "form-control"></textarea><br/>
               기타사항:
-              <textarea name= 'etc' rows = "5" class = "form-control"></textarea><br/>
+            <textarea name= 'etc' rows = "5" class = "form-control"></textarea><br/>
         </div> 
         <div class= "button-container text-right mt-3">
           <!-- Submit button for the form -->
-            <button type=submit class ="btn btn-primary">Add Lesson</button> 
-          </div>
-      
-
+            <button type=submit class ="btn btn-primary">등록</button> 
+        </div>
    </form>
 <!-- jQuery and Bootstrap.js -->
 
