--- a/templates/lesson_report.html
+++ b/templates/lesson_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>수업 목록</title>
+  <title>수업 레포트</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -77,6 +77,7 @@
             <li class="{% if 'lesson_list' in currentPage %}active{% endif %}">
                 <a class = "navbar-brand" href="lesson_list.html">수업 리스트</a>
             </li>
+
             <li class="{% if 'lesson_list' in currentPage %}active{% endif %}">
               <a class = "navbar-brand" href="lesson_report.html">수업 레포트</a>
             </li>
@@ -85,54 +86,58 @@
       </nav>
   </div>
 </div>  
-<div class="container mt-5">
-    <h1 class="mb-4">수업 목록</h1>
-    <!-- Search Date Range Picker -->
-    <div class="row">
-      <div class="col-md-2 mb-3">
-        <label for= "startDatePicker">시작일자</label>
-        <input type= "text" class= "form-control datepicker-input" id= "startDatePicker">
-      </div>
 
-      <div class= "col-md-2 mb-3">
-        <label for= "endDatePicker">종료일자</label>
-        <input type= "text" class= "form-control datepicker-input" id= "endDatePicker">
-      </div>
+    <div class="container mt-5">
+        <h1 class="mb-4">수업 레포트</h1>
+        <!-- Search Date Range Picker -->
+        <div class="row">
+          <div class="col-md-2 mb-3">
+            <label for= "startDatePicker">시작일자</label>
+            <input type= "text" class= "form-control datepicker-input" id= "startDatePicker">
+          </div>
 
-      <!-- Student Name Search Field -->
-      <div class="col-md-2 mb-3">
-        <label for="studentNameSearch">학생 이름</label>
-        <input type="text" id="studentNameSearch" class="form-control" placeholder="학생 이름 검색...">
-      </div>
-      <div class="col-md-3 mb-3">
-        <label for="lessonSearch">과정 </label>
-        <input type="text" id ="lessonSearch"  class ="form-control" placeholder ="과정명 검색...">
-       </div>
-      <div class="col-md-3 mb-3">
-        <label for="lessonDetailSearch">과정 상세명</label>
-        <input type="text" id ="lessonDetailSearch"  class ="form-control" placeholder ="과정 상세명 검색...">
-       </div>
+          <div class= "col-md-2 mb-3">
+            <label for= "endDatePicker">종료일자</label>
+            <input type= "text" class= "form-control datepicker-input" id= "endDatePicker">
+          </div>
 
+          <!-- Student Name Search Field -->
+          <div class="col-md-2 mb-3">
+            <label for="studentNameSearch">학생 이름</label>
+            <input type="text" id="studentNameSearch" class="form-control" placeholder="학생 이름 검색...">
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="lessonSearch">과정 </label>
+            <input type="text" id ="lessonSearch"  class ="form-control" placeholder ="과정명 검색...">
+           </div>
+          <div class="col-md-3 mb-3">
+            <label for="lessonDetailSearch">과정 상세명</label>
+            <input type="text" id ="lessonDetailSearch"  class ="form-control" placeholder ="과정 상세명 검색...">
+           </div>
+        </div>
+        <table id="lessonTable" class="table table-striped table-bordered" style="width:100%">
+          <thead>
+            <tr>
+              <th>선택</th>
+              <th>일자</th>
+              <th>이름</th>
+              <th>과정</th>
+              <th>과정 상세</th>
+              <th>단계</th>
+              <th>수업내용</td>
+              <th>교사지도사항</td>
+            </tr>
+
+          </thead>
+
+        </table>
+
+        <!-- 레포트 생성 버튼 -->
+        <button id="createReportBtn" class="btn btn-primary">레포트 생성</button>
+
+        <!-- 홈으로 돌아가기 링크 -->
+        &nbsp;&nbsp;<a href="/">홈으로 돌아가기</a> 
     </div>
-    <table id="lessonTable" class="table table-striped table-bordered" style="width:100%">
-      <thead>
-        <tr>
-          <th>일자</th>
-          <th>이름</th>
-          <th>과정</th>
-          <th>과정 상세</th>
-          <th>단계</th>
-          <th>수업내용</td>
-          <th>교사지도사항</td>
-        </tr>
-
-      </thead>
-
-   
-    </table>
-
-    <!-- 홈으로 돌아가기 링크 -->
-    &nbsp;&nbsp;<a href="/">홈으로 돌아가기</a>&nbsp;&nbsp;<a href="/lesson.html">입력하기</a>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     
@@ -211,6 +216,6 @@
 
   </script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"></script>
-<script src="/static/lesson_list.js"></script>
+<script src="/static/lesson_report.js"></script>
 </body>
 </html>
