수업상세 가이드 추가

--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -92,7 +92,8 @@
         </div>
         <div>    
              <!-- Input fields for lesson details, teacher comments and etc -->
-             수업 내용: 
+             수업 내용 (최근 동일 상세과정 5건이 작성가이드로 표시됩니다.):
+             <div id="hiddenTooltip" style="display: none;"></div>
             <textarea name= 'lesson_detail' rows = "5" class = "form-control"></textarea><br/>
              교사 지도:
             <textarea name= 'teach_comment' rows = "5" class = "form-control"></textarea><br/>
