--- a/templates/report_sample.html
+++ b/templates/report_sample.html
@@ -49,7 +49,7 @@
 
 </style>
   </head>
-  <body id = "pdf-content">
+  <body>
 
   <div class="container mt-4">
 
@@ -99,7 +99,7 @@
      <!-- Teacher Feedback -->
 <!-- Teacher Feedback -->
 <div class="teacher-feedback p-4 my-4 border border-info rounded bg-light">
-  <h4 class="text-info mb-3">교사 지도</h4>
+  <h4 class="text-info mb-3">선생님 의견</h4>
   {% for row in data %}
       <!-- Assuming the 7th item in each row is the teacher's feedback -->
       {% if loop.index0 < 6 %}
@@ -119,31 +119,28 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-<div class="row">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+  <div class="row">
     {% set max_iterations = (photos|length / data|length)|int %}  {# 원하는 반복 횟수를 설정 #}
     {% for photo in photos %}
-        {% if loop.index0 < max_iterations %}
+      {% if loop.index0 < max_iterations %}
         <div class="col-md-4">
-            <div class="card mb-4 rounded">
+          <div class="card mb-4 rounded">
             <img src="{{ url_for('photos', filename=photo) }}" class="card-img-top" style="max-width: 400px; max-height: 400px; object-fit: contain;">
-            </div>
+          </div>
         </div>
-        {% endif %}
+      {% endif %}
     {% endfor %}
-    </div>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <br>
-    <div style='text-align:center;margin-top:-30px;' >
-      <h4>로봇앤코딩학원</h4>
-      <h5>발급일자 : 현재일자</h5>
-    </div>
-</body>
+  </div>
 
-
-
+  <br>
+  <div style='text-align:center;margin-top:-30px;' >
+    <h4>로봇앤코딩학원</h4>
+    <h5>발급일자 : 현재일자</h5>
+  </div>
  <script type='text/javascript'>
     document.querySelector('h5').innerHTML = `발급일자 : ${new Date().toLocaleDateString()}`;
-
 </script>
 </html>
