레포트 화면에서 사진 클릭시 사진 삭제하는 자바스크립트 추가

--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -34,7 +34,13 @@
        width:auto !important;
      }
    }
-  
+
+    #hiddenTooltip {
+        background-color: lightblue; /* Set the background color to highlight */
+        padding: 10px; /* Add some padding to make the highlight more visible */
+        display: block; /* Ensure the div is displayed */
+    }
+
   </style>     
 </head>
 <body>
@@ -93,7 +99,7 @@
         <div>    
              <!-- Input fields for lesson details, teacher comments and etc -->
              수업 내용 (최근 동일 상세과정 5건이 작성가이드로 표시됩니다.):
-             <div id="hiddenTooltip" style="display: none;"></div>
+             <div id="hiddenTooltip" style="display: none; height: 200px; overflow-y: scroll;" ></div>
             <textarea name= 'lesson_detail' rows = "5" class = "form-control"></textarea><br/>
              교사 지도:
             <textarea name= 'teach_comment' rows = "5" class = "form-control"></textarea><br/>
