레포트화면에서 사진삭제기능 추가 레포트 사진 최대 12장 까지 로드

--- a/templates/lesson_update.html
+++ b/templates/lesson_update.html
@@ -61,7 +61,7 @@
                     <a class = "navbar-brand" href="/lesson_list.html">수업 리스트</a>
                 </li>
                 <li class="{% if 'lesson_list' in currentPage %}active{% endif %}">
-                  <a class = "navbar-brand" href="lesson_report.html">수업 레포트</a>
+                  <a class = "navbar-brand" href="/lesson_report.html">수업 레포트</a>
                 </li>
               </ul> 
             </div> 
