--- a/templates/report_sample.html
+++ b/templates/report_sample.html
@@ -34,7 +34,10 @@
 .col-detail { width: 20%; }   
 .col-content { width:auto; } 
 
-
+.photo-item:hover img {
+  filter: grayscale(100%);
+  cursor: pointer;
+}
   /* Print settings */
   @media print {
       .container {
