--- a/templates/lesson_report.html
+++ b/templates/lesson_report.html
@@ -44,6 +44,18 @@
      width:auto !important;
    }
  }
+ .loading {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding-top: 20%;
+  z-index: 9999;
+}
 </style> 
 
 <!-- Bootstrap Datepicker CSS -->
@@ -131,10 +143,10 @@
           </thead>
 
         </table>
-
+        
         <!-- 레포트 생성 버튼 -->
         <button id="createReportBtn" class="btn btn-primary">레포트 생성</button>
-
+        <div id="loading" class="loading">Loading...</div>
         <!-- 홈으로 돌아가기 링크 -->
         &nbsp;&nbsp;<a href="/">홈으로 돌아가기</a> 
     </div>
