레포트 화면에서 교사지도 직접 수정추가 레포트 화면 사진 검색범위 로직 수정 각 리스트 화면헤더 가운데 정렬

--- a/templates/lesson_list.html
+++ b/templates/lesson_list.html
@@ -117,13 +117,13 @@
     <table id="lessonTable" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
-          <th>일자</th>
-          <th>이름</th>
-          <th>과정</th>
-          <th>과정 상세</th>
-          <th>단계</th>
-          <th>수업내용</td>
-          <th>교사지도사항</td>
+          <th class="text-center">일자</th>
+          <th class="text-center">이름</th>
+          <th class="text-center">과정</th>
+          <th class="text-center">과정 상세</th>
+          <th class="text-center">단계</th>
+          <th class="text-center">수업내용</td>
+          <th class="text-center">교사지도사항</td>
         </tr>
 
       </thead>
