--- a/templates/subject_list_detail.html
+++ b/templates/subject_list_detail.html
@@ -81,10 +81,10 @@
     <table id="subjectdetailTable" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>과정</th>
-          <th>상세 설명</th>
-          <th>레벨</th>
+          <th  class="text-center">ID</th>
+          <th  class="text-center">과정</th>
+          <th  class="text-center">상세 설명</th>
+          <th  class="text-center">레벨</th>
         </tr>
       </thead>
 
