--- a/templates/lesson_report.html
+++ b/templates/lesson_report.html
@@ -130,14 +130,14 @@
         <table id="lessonTable" class="table table-striped table-bordered" style="width:100%">
           <thead>
             <tr>
-              <th>선택</th>
-              <th>일자</th>
-              <th>이름</th>
-              <th>과정</th>
-              <th>과정 상세</th>
-              <th>단계</th>
-              <th>수업내용</td>
-              <th>교사지도사항</td>
+              <th  class="text-center">선택</th>
+              <th  class="text-center">일자</th>
+              <th  class="text-center">이름</th>
+              <th  class="text-center">과정</th>
+              <th  class="text-center">과정 상세</th>
+              <th  class="text-center">단계</th>
+              <th  class="text-center">수업내용</td>
+              <th  class="text-center">교사지도사항</td>
             </tr>
 
           </thead>
