--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -82,9 +82,9 @@
     <table name = "table-header"id="studentTable" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>이름</th>
-          <th>학년</th>
+          <th  class="text-center">ID</th>
+          <th  class="text-center">이름</th>
+          <th  class="text-center">학년</th>
         </tr>
       </thead>
 
