--- a/templates/subject_list.html
+++ b/templates/subject_list.html
@@ -80,8 +80,8 @@
     <table id="subjectTable" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>이름</th>
+          <th  class="text-center">ID</th>
+          <th  class="text-center">이름</th>
         </tr>
       </thead>
 
