레포트 생서, 레슨리스트화면 소팅 제거 레포트생성시 학생이름 필드 비어있으면 취소처리, 레포트 생성시 체크박스 하나이상 체크 있어야 생성 가능하도록 수정

--- a/templates/lesson_report.html
+++ b/templates/lesson_report.html
@@ -130,7 +130,7 @@
         <table id="lessonTable" class="table table-striped table-bordered" style="width:100%">
           <thead>
             <tr>
-              <th  class="text-center">선택</th>
+              <th class="text-center"><input type="checkbox" id="select-all" /></th>
               <th  class="text-center">일자</th>
               <th  class="text-center">이름</th>
               <th  class="text-center">과정</th>
