--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,10 @@
 <head>
     <style>
         body {
-            background-image: url('coding-1853305_1280.jpg');
+            background-image: url('/static/coding-1853305_1280.jpg');
             background-size: cover;
             background-position: center;
-            filter: brightness(80%) grayscale(30%);
+            filter: brightness(60%) sepia(20%) contrast(110%);
             font-family: 'Arial', sans-serif; /* Sensuous font */
             margin: 0;
             height: 100vh;
@@ -14,11 +14,12 @@
             justify-content: center;
             align-items: center;
         }
-    
         .content {
             text-align: center;
             padding: 50px;
-            color: #0066cc; /* 파란색 계열의 텍스트 색상 (#0066cc는 파란색 예시) */
+            color: #FFFFFF; /* 흰색 */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* 텍스트에 약간의 그림자를 추가하여 읽기 용이성 향상 */
+            font-weight: bold; /* 텍스트를 굵게 하여 가독성 향상 */
         }
     
         h1 {
@@ -49,6 +50,18 @@
             font-size: 20px;
             border-radius: 5px;
             cursor: pointer;
+        }
+        .btn-primary {
+            background-color: #FFFFFF; /* 흰색 배경 */
+            border: 2px solid #AAAAAA; /* 회색 테두리 */
+            color: #000000; /* 검정색 텍스트 */
+            text-shadow: none; /* 기존 텍스트 그림자 제거 (필요한 경우) */
+        }
+        
+        .btn-primary:hover {
+            background-color: #DDDDDD; /* 밝은 회색 배경 */
+            border: 2px solid #AAAAAA; /* 회색 테두리 */
+            color: #000000; /* 검정색 텍스트 */
         }
     </style>
 </head>
